css/main.scss
---
---

@charset "utf-8";

$navy: #001f3f;
$silver: #ddd;
$gray: #aaa;
$blue: #0074D9;
$aqua: #7FDBFF;

$footer-size: 175px;

@import
    "bootstrap.min",
    "font-awesome.min"
;

/* Base */
/* ----------------------------------------------------------*/

html {
  position: relative;
  min-height: 100%;
}

body {
  color: lighten($navy, 15);
    
    /* Margin bottom by footer height */
  margin-bottom: $footer-size;

  div.container > div {
    margin-bottom: 25px;
  }
}

h1, h2, h3, h4, h5, h6 { 
  font-weight: bold; 
  letter-spacing: -1px;
  margin: 15px 0 15px;
}

a,
a:visited {
  color: $blue; 
  text-decoration: none; 
}

a:hover { 
  color: $aqua; 
  text-decoration: underline; 
}

/* Layout Styles */
/* ----------------------------------------------------------*/

/* Site header */

.navbar.navbar-default {
  border-bottom: 2px solid;
  border-color: $gray;
  background-color: $navy;

  a {
    color: $silver !important;
  }
}

/* Site footer */

footer.footer {
  border-top: 1px solid $gray;
  background-color: $navy;
  color: $silver !important;
  padding: 20px 0;

  /* make it sticky to the bottom */
  position: absolute;
  bottom: 0;
  width: 100%;
  
  /* Set the fixed height of the footer here */
  height: $footer-size;

  .fa {
    color: $gray;
    width: 16px;
    height: 16px;
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

}

/* Post styles */
/* ----------------------------------------------------------*/

p.meta {
  font-size: 15px;
  color: $gray;
}

.post-content blockquote {
  border-left: 4px solid #e8e8e8;
  padding-left: 20px;
  font-size: 18px;
  opacity: .6;
  letter-spacing: -1px;
  font-style: italic;
  margin: 30px 0;
}

.post pre,
.post code {
  border: 1px solid #d5d5e9;
  background-color: #eef;
  padding: 8px 12px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  font-size: 15px;
  overflow:scroll;
}

.post code { padding: 1px 5px; }

.post pre code {
  border: 0;
  padding-right: 0;
  padding-left: 0;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.post pre.terminal code { background-color: #333; }

/* Syntax highlighting styles */
/* ----------------------------------------------------------*/

.highlight  { background: #ffffff; }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { font-weight: bold } /* Keyword */
.highlight .o { font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { font-weight: bold } /* Keyword.Constant */
.highlight .kd { font-weight: bold } /* Keyword.Declaration */
.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #d14 } /* Literal.String */
.highlight .na { color: #008080 } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
.highlight .no { color: #008080 } /* Name.Constant */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: #000080 } /* Name.Tag */
.highlight .nv { color: #008080 } /* Name.Variable */
.highlight .ow { font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #d14 } /* Literal.String.Backtick */
.highlight .sc { color: #d14 } /* Literal.String.Char */
.highlight .sd { color: #d14 } /* Literal.String.Doc */
.highlight .s2 { color: #d14 } /* Literal.String.Double */
.highlight .se { color: #d14 } /* Literal.String.Escape */
.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
.highlight .si { color: #d14 } /* Literal.String.Interpol */
.highlight .sx { color: #d14 } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: #d14 } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080 } /* Name.Variable.Class */
.highlight .vg { color: #008080 } /* Name.Variable.Global */
.highlight .vi { color: #008080 } /* Name.Variable.Instance */
.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */


/*
 * Custom Styles
 */

figure {
    text-align: center;

    margin-top: 10px;
    margin-bottom: 10px;
}

figure.highlight pre {
    text-align: left;
}

.post-content > figure.right {
	margin: 10px 0 10px 15px;
  float: right;
}

figcaption {
    color: #999999;
}

#conversion-table  {
 border-collapse: collapse;
}

#conversion-table td {
    border: 1px solid black;
}

p.meta {
  margin: 0 !important;
}

.post-content,
.posts .post {

  p {
    text-align: justify;

    img {
      /* reproduce img-responsive for markdown */
      max-width: 100%;
      height: auto;
      display: block;
    }
  }
  
  p, figure.highlight, blockquote, div.highlighter-rouge {

    margin-left: 10px;
  }
}

/* main view styles */
div.posts div {

  a.post-link {
    color: lighten($navy, 15);
  }

    margin-bottom: 20px;

    div.excerpt {

        h2, h3 {
          /* remove headlines from excerpt */
            display: none;
        }

        ul {
          /*  compact lists in excerpts */
            margin: 5px 0px 20px 30px;

            li {
                margin: 0;
            }
        }
        
        figure.right {
            margin: 5px 0 5px 15px;
            float: right;
        }

    }
}

